<resources>
    <string name="app_name">TicTacToe</string>
    <string name="restart_button">Restart</string>
    <string name="start_game">Start game</string>
    <string name="about">About</string>
    <string name="version">Version:</string>
    <string name="developers">Developers:</string>
    <string name="history">History</string>
    <string name="button_top_left">Top left field</string>
    <string name="button_top_center">Top center field</string>
    <string name="button_top_right">Top right field</string>
    <string name="button_middle_left">Middle left field</string>
    <string name="button_middle_center">Middle center field</string>
    <string name="button_middle_right">Middle right field</string>
    <string name="button_bottom_left">Bottom left field</string>
    <string name="button_bottom_center">Bottom center field</string>
    <string name="button_bottom_right">Bottom right field</string>
    <string name="current_player_turn">Current </string>
    <string-array name="developers_array">
        <item>Lennart Klar</item>
        <item>Github Copilot</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_button">Return</string>
    <string name="versus">vs.</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
</resources>